[FIX] mrp_workorder: prevent Google Slides controls from being clipped
The controls of Google Slides were being clipped as a result of
a negative margin.

Steps to reproduce:
1. Create a BoM
2. Add an operation w/ a Google Slides document
3. Don't create steps for the operation
4. Create a new manufacturing order with this BoM
5. Confirm it and open the tablet view from the workorders

This commit fixes the clipping issue, ensuring that the Google Slides
controls are displayed properly.

OPW-3325158

closes odoo/enterprise#43544

X-original-commit: 212a39530db174798e52d9cb9c3930cb26e8f5e5

--- a/mrp_workorder/static/src/components/tablet.scss
+++ b/mrp_workorder/static/src/components/tablet.scss
@@ -188,9 +188,6 @@ $o-wo-tablet-text: color-contrast($o-wo-tablet-bg, $body-color, #FFF);
             display: flex;
             flex-flow: column;
             padding-left: 0;
-            &:first-child {
-                margin-bottom: -24px;
-            }
             .o_tablet_instruction_note {
                 padding: $o-wo-tablet-padding*0.5;
                 overflow: auto;
